[package]
name = "bml_grapher"
version = "0.1.3"
edition = "2021"
readme = "README.md"


license = "MIT OR Apache-2.0"


description = "A library for graphing functions, plots, and other things probably.\nIt's a wrapper over minifb for drawing functions with similar syntax to canvas in JS."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.27.0"

# rand crate is needed for the simulated_annealing example
[dev-dependencies]
rand="0.9.2"